Changelog
=========

1.2.5 - unreleased
------------------

- Specify image dimensions for the edit-bar images.
  [hannosch]

- Increase cache max age for static assets to one week to follow `page speed`
  best practices.
  [hannosch]

- Optimize all image data sizes.
  [hannosch]

- Update to distribute = 0.6.15.
  [hannosch]

1.2.4 - 2011-04-21
------------------

- Change Varnish `default_ttl` to zero (from two minutes) to avoid caching
  responses without cache control headers.
  [hannosch]

- Update to Plone 4.0.5.
  [hannosch]

- Split out munin into its own buildout. Closes #201.
  [hannosch]

1.2.3 - 2011-04-14
------------------

- Add caching headers to under_construction image on error pages and specify
  image dimensions.
  [hannosch]

- Don't redirect to an error page if no Zope backend is available. Closes #198.
  [hannosch]

- Update to HAProxy 1.4.15.
  [hannosch]

- Sanitize and unbreak create_site and upgrade scripts.
  [MJ, hannosch]

- Don't rely on dist.plone.org.
  [hannosch]

1.2.2 - 2011-04-03
------------------

- Correct buildout's `allow-hosts` restriction.
  [hannosch]

1.2.1 - 2011-04-03
------------------

- Added new rapidssl certificate.
  [martior]

- Optimize Gzip compression settings for HTML content.
  [hannosch]

- Sent authentication cookies only over secure connections. Closes #135.
  [hannosch]

- Respect the `types_not_searched` filter on the user profile. Closes #123.
  [hannosch]

- Resolve remaining problems with the employee listing and search, including
  catalog inconsistencies (#101, #104), Unicode problems (#103) and missing
  breadcrumbs (#116, #117, #118).
  [stefan, hannosch]

- Add missing mime types and enable gzip compression for web fonts.
  [hannosch]

- Enable click-jacking protection by preventing the site to be loaded inside
  a frame.
  [hannosch]

- Enable SSL session cache to support SSL session resumption. SSL sessions can
  be reused for up to 10 minutes.
  [hannosch]
