@@ -13,6 +13,8 @@ PIL = 1.1.7-jarn1
 plone.app.caching = 1.0b3-jarn1
 # support for secure cookie without requiring local https setup
 plone.session = 3.5
+# CSS class for hiding the `edit without visual editor` link
+Products.TinyMCE = 1.1.10-jarn1
 # Get new media types and font mime types, like woff
 zope.contenttype = 3.5.3
 zope.globalrequest = 1.0
